--- a/cssMemSliderTask/style.css
+++ b/cssMemSliderTask/style.css
@@ -35,7 +35,7 @@ input[name="slider"] {
     display: flex;
     align-items: center;
     width: 400%;
-    transition: transform 0.5s ease-in-out;
+    transition: all 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
     font-size: 0;
 }
 
@@ -66,11 +66,17 @@ input[name="slider"] {
 .descriptions {
     display: flex;
     width: 400%;
-    transition: transform 0.5s ease-in-out;
+    transition: all 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
 }
 
 .description {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 25%;
+}
+
+.description div {
     font-size: 1.5rem;
     color: #1c1c1c;
 }
